--- a/src/csscomponent/navbar.css
+++ b/src/csscomponent/navbar.css
@@ -10,8 +10,7 @@
   
   .navbar {
 
-
-    background: black;
+    background:rgba(0,0,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,10 +90,10 @@
     transition: width 0.7s ease, background-color 0.5s ease;
   }
   
-  .nav-item:hover:after {
+  /* .nav-item:hover:after {
     width: 100%;
     background: #ffdd40;
-  }
+  } */
   
   .nav-item.active {
     color: #ffdd40;
